[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datareg"
version = "0.3.0"
description = "Data regularization layers"
authors = [{name="Umberto Barros", email="umbertobarrosf@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "tensorflow>=2.12.0",
    "keras-cv>=0.6.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]